# zfilexfer

./: Cargo.toml  README.md
src/: arbitrator.rs  chunk.rs  error.rs  file.rs  lib.rs  server.rs
tests/: lib.rs
