[package]
name = "zfilexfer"
version = "0.0.1"
authors = [ "Peter Hayes <peter.hayes@betweenlines.co.uk>" ]
license = "MPL-2.0"
description = "File transfer over ZMQ sockets."
keywords = ["zfilexfer"]
repository = "https://github.com/betweenlines/zfilexfer"

[dev-dependencies]

tempdir = "0.3"

[dependencies]

crc = "1.2"
czmq = { git = "https://github.com/petehayes102/rust-czmq.git", tag = "0.0.5" }
rustc-serialize = "0.3"
zdaemon = { git = "https://github.com/betweenlines/zdaemon.git", tag = "0.0.1" }
